<resources>
    <string name="app_name">ChatWave</string>
    <string name="title_add_new_user">Start New Chat</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_no_internet">No Internet</string>
    <string name="chat_conversation">ChatConversation</string>
    <string name="title_chat_userList">Chat User</string>
    <string name="login">Login</string>
    <string name="username_email">Username or E-mail</string>
    <string name="chatwave">ChatWave</string>
    <string name="password">Password</string>
    <string name="not_a_member_yet">Not a member yet ?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="date_of_birth">DOB</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>
    <string name="text_time">09:60pm</string>
    <string name="moni">Moni</string>
    <string name="yesterday">Yesterday</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="last_message_here">Last message is here</string>
    <string name="menu">Menu</string>
    <string name="userProfile">UserProfile</string>
    <string name="token_cannot_be_empty">Token can not be Empty</string>
    <string name="fill_all_details">Fill all the details</string>
    <string name="email_password_should_not_be_empty">Email and password should not be empty</string>
    <string name="internet_connection_not_available">No Internet Connection available. Please check your connection.</string>
    <string name="already_member_then_login">Already a member login !</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email_should_be_gmail">Email should be in gmail.com format</string>




</resources>