<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_add_new_user"
        android:name="com.example.chatwave.ui.chat.searchuser.AddNewChatUserFragment"
        android:label="@string/title_add_new_user"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.chatwave.ui.Register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.chatwave.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_conversation"
        android:name="com.example.chatwave.ui.chat.conversation.ChatConversationFragment"
        android:label="@string/chat_conversation"
        tools:layout="@layout/fragment_chat_conversation" >
        <argument
            android:name="user"
            app:argType="com.example.chatwave.models.response.UserListResponse"
            app:nullable="true" />
    </fragment>
<fragment
    android:id="@+id/navigation_chat_user"
    android:name="com.example.chatwave.ui.chat.userlist.ChatUserListFragment"
    android:label="@string/title_chat_userList"
    tools:layout="@layout/fragment_chat_user_list"
    >
    <argument
        android:name="chatUserList"
        app:argType="com.example.chatwave.models.response.UserListResponse"
        app:nullable="true" />
</fragment>
    <fragment
        android:id="@+id/navigation_no_internet"
        android:name="com.example.chatwave.ui.InternetConnection"
        android:label="@string/title_no_internet"
        tools:layout="@layout/fragment_internet_connection" />

</navigation>