<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginFormCl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle"
           >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/last_name"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTextIl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/user_name"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTextIl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextIl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextIl"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextIl"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtconfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="18dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfBirthTextIl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/date_of_birth"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextIl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/black"
                    android:imeOptions="actionDone"
                    android:clickable="true"
                    android:inputType="date"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirthTextIl" />

            <LinearLayout
                android:id="@+id/genderRadioGroupRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textGender">

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male"
                        android:textSize="16sp"/>

                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/female"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="12dp"
                app:boxStrokeColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderRadioGroupRl" />


            <TextView
                android:id="@+id/tvMsgLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/already_member_then_login"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/btnRegister"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/login"
                android:textColor="@color/lightGrey"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnRegister"
                app:layout_constraintStart_toEndOf="@+id/tvMsgLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/chatwave"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <include
            android:id="@+id/progress_layout"
            layout="@layout/include_progressbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>